Version 4.4.13 - 2018-08-20
* Bug fixes (see mercurial logs for details)

Version 4.4.12 - 2018-08-03
* Bug fixes (see mercurial logs for details)

Version 4.4.11 - 2018-07-05
* Bug fixes (see mercurial logs for details)

Version 4.4.10 - 2018-06-11
* Bug fixes (see mercurial logs for details)

Version 4.4.9 - 2018-05-07
* Bug fixes (see mercurial logs for details)

Version 4.4.8 - 2018-03-01
* Bug fixes (see mercurial logs for details)

Version 4.4.7 - 2018-01-04
* Bug fixes (see mercurial logs for details)

Version 4.4.6 - 2017-12-04
* Bug fixes (see mercurial logs for details)

Version 4.4.5 - 2017-11-07
* Bug fixes (see mercurial logs for details)

Version 4.4.4 - 2017-10-03
* Bug fixes (see mercurial logs for details)

Version 4.4.3 - 2017-08-08
* Bug fixes (see mercurial logs for details)

Version 4.4.2 - 2017-07-01
* Bug fixes (see mercurial logs for details)

Version 4.4.1 - 2017-05-19
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Sanitize path in file_open against suffix (CVE-2017-0360)
* Add constraint on user password
* Remove Property field
* Add MultiValueMixin and ValueMixin
* Use sql type in column creation
* Use generic SQL type in field and let backend determine the SQLType
* Add filter to xxx2Many fields
* Add NULLS ordering
* Add context domain on ir.action.act_window
* Allow None limit in action window
* Add has_window_functions on Database
* Allow Many2One on ModelSQL to target ModelStorage
* Manage Cache in Transaction
* Allow to register multiple exit functions on Transaction
* Return 429 status when too many login attempts
* Add set_rpc on Field
* Add has_select_for on Database
* Store custom report translation in separate module
* Add form action keyword for set/synchronize translation on report and view
* Add negative value for col attribute
* Allow to use domain_<field name> method with Function fields
* Validate wizard definition on module tests